# odysseus-kwin-plugins

./: CMakeLists.txt
config/: kwinrc
plugins/: CMakeLists.txt
plugins/cybermagic/: CMakeLists.txt  cybermagic.cpp  cybermagic.desktop  cybermagic.h
plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h  odysseus.json  resources.qrc
scripts/cyber_squash/: metadata.desktop  metadata.json
scripts/cyber_squash/contents/code/: main.js
scripts/cyberlauncher/contents/: main.js
tabbox/cyber_thumbnail/: metadata.desktop
tabbox/cyber_thumbnail/contents/ui/: main.qml
